# stm32

./: Cargo.toml  flash.sh  openocd.cfg  serial-protocol.md  shell.nix  test.py
src/: main.rs
