[package]
authors = ["Xavier L'Heureux <dev.xlheureux@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "braille-pas"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
cortex-m-rtfm = "0.5"
panic-semihosting = "0.5"
stm32f1xx-hal = { version = "0.5", features = ["stm32f103", "rt", "stm32-usbd", "medium"] }
# atsamd-hal = { version = "0.8", features = ["samd21g18a", "samd21g18a-rt", "usb", "unproven"] }
embedded-hal = "0.2"
nb = "0.1"
usb-device = "0.2"
usbd-serial = "0.1"
heapless = "0.5"

# this lets you use `cargo fix`!
[[bin]]
name = "braille-pas"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
# opt-level = 's' # to try if it does not fit on the board
